Set textarea to autofocus in index.html for improved user experience

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   </header>
 
   <main class="container">
-    <textarea name="apology" id="apology" placeholder="Write your apology here..."></textarea>
+    <textarea name="apology" id="apology" autofocus placeholder="Write your apology here..."></textarea>
     <button class="generate-btn">Generate Apology Image</button>
   </main>
 
