Refactor header structure in index.html and style.css by removing the logo class for improved semantic HTML and styling consistency

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <header>
-    <h1 class="logo">I Forgot to Say Sorry <span class="logo-emoji">🙏</span></h1>
+    <h1>I Forgot to Say Sorry <span class="logo">🙏</span></h1>
   </header>
 
   <main class="container">
